--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
     <artifactId>design-pattern</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
+    </dependencies>
 </project>
 
 
